--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.821.0",
+    "@aws-sdk/lib-storage": "^3.821.0",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
@@ -9,6 +12,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
     "multer": "^2.0.0",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "stripe": "^18.1.1"
@@ -16,5 +20,8 @@
   "scripts": {
     "start": "node index",
     "dev": "nodemon index"
+  },
+  "engines": {
+    "node": "20.11.1"
   }
 }
